<resources>
    <string name="app_name">Resume Maker - CV Maker</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="yearly">YEARLY</string>
    <string name="active">Active</string>
    <string name="companyName">Company Name</string>
    <string name="location">Location</string>
    <string name="jobTitle">Job Title</string>
    <string name="description">Description</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="prjectName">Project Name</string>
    <string name="details"><b>Details</b></string>
    <string name="projectDetail">Project Detail</string>
    <string name="degree">Degree</string>
    <string name="schoolName">School Name</string>
    <string name="achievements">Achievements</string>
    <string name="website">Website</string>
    <string name="socialLink">Social Links</string>
    <string name="linkedin">Linkedin</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="reference">Reference</string>
    <string name="leaveTheFieldEmptyMessage">"Leave the input field empty if you don't want to include them in your CV, for better understanding we filled input field with example data"</string>
    <string name="emptyList">Empty List</string>
    <string name="allFieldAreRequired">All fields are required!</string>
    <string name="school">School</string>
    <string name="project">"Project "</string>
    <string name="experience">Experience</string>
    <string name="knownlLangugages">"Known Languages "</string>
    <string name="enterYourSkill">Enter Your Skill</string>
    <string name="rateYourSkillOutOfFive">Rate Your Skill Out Of 5</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="enterYourLanguageFirst">Enter your language first</string>
    <string name="rateYourLanguageFirst">Rate your language first</string>
    <string name="enterYourLanguage">Enter your language</string>
    <string name="rateYourLanguagesOutOfFive">Rate Your language Out Of 5</string>
    <string name="enterYourHobby">Enter your Hobby</string>
    <string name="enterYourHobbyFirst">Enter your hobby first</string>
    <string name="yourHobbies">Your Hobbies</string>
    <string name="personalInfo">Personal Info</string>
    <string name="otherDetail">Other Detail</string>
    <string name="education">"Education "</string>
    <string name="preview">Preview</string>
    <string name="setting">Settings</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="workExperienc">"Work Experience "</string>
    <string name="highlightskill">Skill</string>
    <string name="hobby">Hobby</string>
    <string name="contact">"Contact  "</string>
    <string name="enterYourSkillFirst">Enter your skill first</string>
    <string name="rateYourSkillFirst">Rate your skill first</string>
    <string name="symbol_separator">ㅡ</string>
    <string name="profilePicture">Photo</string>
    <string name="firstName">Name</string>
    <string name="lastName">Last Name</string>
    <string name="dob_optional">DOB (Optional)</string>
    <string name="maritalStatus_optional">Marital Status (Optional)</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address1">Address 1</string>
    <string name="address2_optional">Address 2 (optional)</string>
    <string name="professionTitle">Profession Title</string>
    <string name="summary">Summary</string>
    <string name="permission_denied_message2">Permission Denied, the app may not work without these permission. Try again.</string>
    <string name="howToSavePdfFile">How to save CV as PDF File</string>
    <string name="howToSavePdfFileMessage">"In order to save PDF file click on Save PDF Button in coming next screen. If save PDF button is not showing just click on 'Select Printer' &amp; 'choose Save as PDF' option from the top right corner"</string>
    <string name="neverShowAgain">Never show again</string>
    <string name="gotIt">Got IT</string>
    <string name="resumeCreateSuccessfullyAndCanBeFoundMessage">Resume Created Successfully.. can be find in PDF Files option in main screen</string>
    <string name="resumeHiglightRestSuccessfully">Resume Highlights Reset Successfully</string>

    <string name="personalInformationWithNewLine">Personal Information</string>
    <string name="educationalDetailWithNewLine">Educational Information</string>
    <string name="highlightSkillWithNewLine">"Highlight
Skill"</string>
    <string name="knownLanguageWithNewLine">"Known
Languages"</string>
    <string name="hobbiesOrInterestWithNewLine">"Hobbies
or Interest"</string>
    <string name="view_cv">View CV</string>
    <string name="add_skills">Add Skills</string>
    <string name="_1_5">1/5</string>
    <string name="add_education">Add Education</string>
</resources>