<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bold"
        android:padding="@dimen/_12sdp"
        android:text="@string/howToSavePdfFile"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_regular"
        android:gravity="center"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/howToSavePdfFileMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/neverShowAgainCB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toStartOf="@+id/gotItBtn"
            android:fontFamily="@font/font_medium"
            android:text="@string/neverShowAgain"
            android:textSize="@dimen/_11sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gotItBtn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_7sdp"
            android:text="@string/gotIt"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>
</LinearLayout>