<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_5sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bold"
        android:padding="@dimen/_12sdp"
        android:text="@string/add_skills"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bold"
        android:gravity="start|center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/enterYourSkill"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_13sdp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/skillNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/font_medium"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/rattingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"
            android:gravity="start|center"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/rateYourSkillOutOfFive"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="start|center"
            android:weightSum="1.5">

            <testantony.resumemaker.cvmaker.profilecreate.Utils.CustomIORatingBar
                android:id="@+id/customIORatingBar"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rattingNumber"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/font_bold"
                android:gravity="center"
                android:text="@string/_1_5"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:elevation="2dp"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_7sdp"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:fontFamily="@font/font_medium"
            android:padding="@dimen/_7sdp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>