<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtHint"
        android:isScrollContainer="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/achievements"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/achievementsEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/website"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/websiteEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/linkedin"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/linkdinEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/facebook"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/facebookET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/twitter"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/twitterEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/reference"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/referenceEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f6f6f6"
        android:fontFamily="@font/font_regular"
        android:padding="@dimen/_15sdp"
        android:text="@string/leaveTheFieldEmptyMessage"
        android:textColor="@color/Red1"
        android:textSize="@dimen/_9sdp" />
</RelativeLayout>